Editor: Fix low contrast of featured image block
This changes the color of the `Set as Featured Image` text and icon to white when ones drags an image hover it.

--- a/client/components/drop-zone/style.scss
+++ b/client/components/drop-zone/style.scss
@@ -77,7 +77,11 @@
 		background-color: var( --color-accent-light );
 	}
 
-	.drop-zone__content {
-		color: var( --color-text );
+	.drop-zone__content-icon svg g {
+		fill: var( --color-white );
+	}
+
+	.drop-zone__content-text {
+		color: var( --color-white );
 	}
 }
